<resources>
    <string name="app_name">TP4</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">List Of Contacts</string>
    <string name="second_fragment_label">Add New Contact</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="job">Job</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>]

</resources>
